# readconnect-back

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/config/: db.py  environment.py  logger.py
src/readconnect/auth/application/login_user/: login_user_use_case.py
src/readconnect/auth/application/signup_user/: signup_user_use_case.py
src/readconnect/auth/domain/dtos/: login_request_dto.py  login_response_dto.py  signup_request_dto.py  signup_response_dto.py
src/readconnect/auth/domain/services/: auth_service.py
src/readconnect/auth/infrastructure/routes/: auth_routes.py
src/readconnect/authors/application/get_authors/: get_authors_use_case.py
src/readconnect/authors/application/get_books_from_an_author/: get_books_from_an_author_use_case.py
src/readconnect/authors/domain/dtos/: authors_query_params.py
src/readconnect/authors/domain/models/: author_model.py  restrictions.py
src/readconnect/authors/domain/services/: authors_service.py
src/readconnect/authors/infrastructure/routes/: authors_routes.py
src/readconnect/books/application/get_book_by_id/: get_book_by_id_use_case.py
src/readconnect/books/application/get_books/: get_books_use_case.py
src/readconnect/books/domain/dtos/: books_query_params.py
src/readconnect/books/domain/models/: book_model.py  books_categories_model.py  restrictions.py
src/readconnect/books/domain/services/: books_service.py
src/readconnect/books/infrastructure/routes/: books_routes.py
src/readconnect/categories/domain/models/: category_model.py  restrictions.py
src/readconnect/shared/domain/dtos/: error_response_dto.py  query_params.py
src/scripts/: poblate_db.py
(+15 files in other folders)
