[tool.poetry]
name = "readconnect-back"
version = "0.1.0"
description = ""
authors = ["Yeison Fernandez"]
readme = "README.md"
packages = [{ include = "readconnect", from = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = { extras = ["standard"], version = "^0.23.2" }


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
black = "^23.10.1"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
start = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
